tests/ui/associated-const.stderr
error[E0038]: the trait `Trait` cannot be made into an object
 --> tests/ui/associated-const.rs:1:1
  |
1 | #[typetag::serde]
  | ^^^^^^^^^^^^^^^^^ `Trait` cannot be made into an object
  |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
 --> tests/ui/associated-const.rs:3:11
  |
2 | pub trait Trait {
  |           ----- this trait cannot be made into an object...
3 |     const ASSOC: u8;
  |           ^^^^^ ...because it contains this associated `const`
  = help: consider moving `ASSOC` to another trait
  = note: this error originates in the attribute macro `typetag::serde` (in Nightly builds, run with -Z macro-backtrace for more info)
